--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			</div>
 			<div class="col-md-2">
 				<div class="btn-download">
-					<button class="btn btn-warning" type="submit">Download Resume</button>
+					<form method="get" action="resume-gulnaz.pdf">
+						<button class="btn btn-warning" type="submit">Download Resume</button>
+					</form>
 				</div>
 			</div>
 	  	</div>	  	
@@ -79,7 +81,7 @@
 		      <div class="caption">
 		        <h3>Online Shopping</h3>
 		        <p>Website for online shopping created using Bootstrap and jQuery</p>
-		        <p><a href="#" class="btn btn-warning" role="button">View</a> <a href="#" class="btn btn-default" role="button">Кнопка</a>
+		        <p><a href="ishop/products.html" target="blank" class="btn btn-warning" role="button">View</a> 
 		        </p>
 		      </div>
 		    </div>
