--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
 		<h2 id="education">Education</h2>
 		<div class="row">
 		  	<div class="col-md-4">
-		  		<h3>Tatar Gymnazium №14, Russia, <br>1994 - 2004</h3>
-		  		<p>I completed general education </br></p>
+		  		<h3>Tatar Gymnasium №14, Russia, <br>1994 - 2004</h3>
+				<p>Certificate of High School</p>
 		  	</div>		  	
 		  	<div class="col-md-4">
 		  		<h3>Kazan State Technical University, Russia, <br>2004 - 2011</h3>
-		  		<p>Bachelor Degree in Computer Engineering</br>
-		  		I have evaluation</p>
+		  		<p>Bachelor Degree in Computer Engineering</p>
 		  	</div>
 		  	<div class="col-md-4">
 		  		<h3>Vanier College, Montreal, <br>2017 - 2018</h3>
