--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="col-md-2">
 				<div class="btn-download">
-					<form method="get" action="resume-gulnaz.pdf">
+					<form method="get" action="Intern_Gulnaz_Zakirova.pdf">
 						<button class="btn btn-warning" type="submit">Download Resume</button>
 					</form>
 				</div>
