--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  			<div class="col-sm-12 col-md-8">
 	  			  	<div class="name">
 				  		<h1 class="text-color">Hi, I'm Gulnaz Zakirova!</h1>
-				  		<h3 class="text-color">Junior Front-End Developer</h3>
+				  		<h3 class="text-color">Junior Web Developer</h3>
 				  		<span class="glyphicon glyphicon-envelope text-color"> zakirovagulnaz22@gmail.com</span><br>
 						<span class="glyphicon glyphicon-phone text-color"> (438)926-4243</span>
 		  			</div> 
@@ -53,8 +53,8 @@
 	<div class="container">		
 		<h2 id="about-me">About Me</h2>
 		<p>
-			Well-organized and process-oriented specialist with 3+ years of experience in survey and analyzing data for software development. Strategic mindset that focuses on problem solving tasks and maintaining priorities on strict deadlines.
-		 	Highly interested in programming, I’m looking for a position as Programmer Intern to improve my programming skills, utilizing abilities and experiences gained through relevant education and projects. 
+			Well-organized and process-oriented specialist with 5+ years of experience in IT industry. Strategic mindset that focuses on problem solving tasks and maintaining priorities on strict deadlines.
+		 	Highly interested in programming, I’m looking for a position as Junior Web Developer to improve my programming skills, utilizing abilities and experiences gained through relevant education and projects. 
 		</p>
 		<div class="row">
 		  	<div class="col-md-4">
@@ -63,7 +63,7 @@
 		  	</div>		  	
 		  	<div class="col-md-4">
 		  		<h3>My Objectives</h3>
-		  		<p>I have an intention to be experienced Senior Front-End Developer. And to make an around the world trip!</p>
+		  		<p>I have an intention to be experienced Senior Web Developer. And to make an around the world trip!</p>
 		  	</div>
 		  	<div class="col-md-4">
 		  		<h3>My Hobbies</h3>
@@ -116,7 +116,7 @@
 			  		<ul class="skills">
 						<li>HTML/CSS/Bootstrap</li>
 						<li>JavaScript/jQuery</li>
-						<li>Git, WebStorm, Sublime Text</li>
+						<li>Github, WebStorm, Sublime Text</li>
 						<li>Familiar with Java, C#, VB.NET, SQL</li>
 						<li>Good understanding database modeling, object-oriented programming </li>
 					</ul>
