--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
 			<p class="contacts">
 				<span class="glyphicon glyphicon-envelope"> zakirovagulnaz22@gmail.com</span><br>
 				<span class="glyphicon glyphicon-phone"> (438)926-4243</span><br>
-				<span class="glyphicon glyphicon-send"> telegram: @austinwhite</span><br>
-				<span class="glyphicon glyphicon-comment"> skype: zakirova2287</span>
+				<span class="glyphicon glyphicon-send"> telegram: @gulnazik22</span><br>
 			</p>  			
   		</div>
 	</footer>
